<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.mvgreen.smsservice.MainActivity" android:orientation="vertical">

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/edit_ip"
              android:inputType="textUri" android:hint="@string/ip_hint"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/edit_deviceid"
              android:inputType="number" android:hint="@string/id_hint"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_expected_id"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
             android:id="@+id/edit_expected_id" android:inputType="number"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btn_confirm"
            android:text="@string/btn_confirm_text" android:onClick="onConfirmSettings"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_log"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical">
        <EditText android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="3"
                  android:id="@+id/edit_log"/>
        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/btn_controll_service" android:onClick="onToggleService"/>
    </LinearLayout>
</LinearLayout>
